--- a/tournamentApp/appsettings.json
+++ b/tournamentApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-5FBO36T;Database=TournamentsSystem;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=YourServer;Database=TournamentsSystem;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
